# judica-vm

./: .gitignore  .gitmodules  .yarnrc.yml  CONTRIBUTING  Cargo.toml  STARTUP.sh  copyright_notice.rs  package.json
common/attest/: Cargo.toml
common/attest-database/: Cargo.toml
common/attest-database/src/: connection.rs  db_handle.rs  lib.rs  sql_error.rs  sql_serializers.rs  tests.rs
common/attest-database/src/db_handle/: create.rs  get.rs  insert.rs  mod.rs  setup.rs  update.rs
common/attest-database/src/db_handle/get/: chain_commit_groups.rs  hidden_services.rs  messages.rs  mod.rs  nonces.rs  users.rs
common/attest-database/src/db_handle/insert/: mod.rs
common/attest-database/src/db_handle/sql/: create_tables.sql  mod.rs
common/attest-database/src/db_handle/sql/get/: all_chain_commit_group_members_tips_for_chain.sql  all_chain_commit_groups_for_chain.sql  all_genesis.sql  all_messages.sql  all_messages_after.sql  all_messages_after_connected.sql  all_messages_by_key.sql  all_messages_by_key_connected.sql  all_messages_connected.sql  all_tips_for_all_users.sql  connected_messages_newer_than_for_genesis.sql  disconnected_tips_for_known_keys.sql  message_by_height_and_user.sql  message_tips_by_user.sql  reused_nonces.sql  tips_for_known_keys.sql
common/attest-database/src/db_handle/sql/get/chain_commit_groups/: all_chain_commit_group_members_for_chain.sql  all_chain_commit_group_members_new_envelopes_for_chain.sql  all_chain_commit_group_members_tips_for_chain.sql  all_chain_commit_groups.sql  all_chain_commit_groups_for_chain.sql
common/attest-database/src/db_handle/sql/get/hidden_services/: all.sql
common/attest-database/src/db_handle/sql/get/messages/: by_hash.sql  by_id.sql  exists.sql  exists_children.sql
common/attest-database/src/db_handle/sql/get/nonces/: secret_for_nonce.sql
common/attest-database/src/db_handle/sql/get/users/: all_secret_keys.sql  all_users.sql  user_by_key.sql
common/attest-database/src/db_handle/sql/insert/: add_chain_commit_group_member.sql  add_chain_commit_group_subscriber.sql  envelope.sql  hidden_service.sql  keypair.sql  new_chain_commit_group.sql  user.sql
common/attest-database/src/db_handle/sql/tables/: chain_commit_group_members.sql  chain_commit_group_subscribers.sql  chain_commit_groups.sql  hidden_services.sql  messages.sql  nonces.sql  private_keys.sql  users.sql
common/attest-database/src/db_handle/sql/triggers/messages/: connect_gap_parent.sql
common/attest-database/src/db_handle/sql/update/: do_connect.sql  hidden_service.sql  resolve_prev_ids.sql
common/attest-database/src/sql/: create_tables.sql  get_all_messages_after.sql  get_disconnected_tips_for_known_keys.sql  get_reused_nonces.sql  insert_envelope.sql
common/attest-database/src/sql/get/: all_messages.sql  disconnected_tips_for_known_keys.sql
common/attest-messages/: Cargo.toml
common/attest-messages/src/: authenticated.rs  checkpoints.rs  lib.rs  nonce.rs  sql_impl.rs
common/attest-util/: Cargo.toml
common/attest-util/src/: lib.rs
common/attest/src/: configuration.rs  control.rs  globals.rs  main.rs  peer_services.rs  test.rs  tor.rs  util.rs
common/attest/src/attestations/: client.rs  mod.rs  query.rs  server.rs
common/attest/src/attestations/client/: connection_creation.rs  http_methods.rs  ws_methods.rs
common/attest/src/attestations/db/: connection.rs  db_handle.rs  mod.rs  sql_serializers.rs  tests.rs
common/attest/src/attestations/db/sql/: create_tables.sql  get_all_messages.sql  get_reused_nonces.sql  get_tips_for_known_keys.sql
common/attest/src/attestations/messages/: checkpoints.rs  mod.rs
common/attest/src/attestations/server/: generic_websocket.rs  protocol.rs  tungstenite_client_adaptor.rs
common/attest/src/attestations/server/protocol/: authentication_handshake.rs
common/attest/src/control/: client.rs  query.rs  server.rs
common/attest/src/peer_services/: fetch_peer.rs  mod.rs  push_peer.rs
common/bitcoin-header-checkpoints/: Cargo.toml
common/bitcoin-header-checkpoints/src/: lib.rs  util.rs
common/game-host/: Cargo.toml
common/game-host/src/: app.rs  globals.rs  main.rs  tor.rs
common/game-host/src/app/routes/: game_init.rs  mod.rs
common/game-player-messages/: Cargo.toml
common/game-player-messages/src/: lib.rs
common/game-sequencer/: Cargo.toml
common/game-sequencer/src/: game_specific.rs  lib.rs
common/mine-with-friends-board/: Cargo.toml
common/mine-with-friends-board/src/: callbacks.rs  entity.rs  lib.rs  sanitize.rs  tests.rs  util.rs
common/mine-with-friends-board/src/game/: game_move.rs  mod.rs
common/mine-with-friends-board/src/nfts/: mint.rs  mod.rs  sale.rs
common/mine-with-friends-board/src/nfts/instances/: lockup.rs  mod.rs
common/mine-with-friends-board/src/nfts/instances/powerplant/: events.rs  mod.rs
common/mine-with-friends-board/src/tokens/: mod.rs  token_swap.rs
common/mine-with-friends-board/src/tokens/instances/: asics.rs  concrete.rs  mod.rs  silicon.rs  steel.rs
common/sapio-litigator/: Cargo.toml
common/sapio-litigator-events/: Cargo.toml
common/sapio-litigator-events/src/: lib.rs
common/sapio-litigator/src/: config.rs  events.rs  ext.rs  litigator_event_log.rs  main.rs
common/sapio-litigator/src/universe/: linearized.rs  mod.rs
common/sapio-litigator/src/universe/extractors/: dlog.rs  game_specific.rs  mod.rs  sequencer.rs  time.rs
common/sapio-litigator/src/universe/observers/: sequencer.rs  time.rs
common/simps/: Cargo.toml
common/simps/src/: lib.rs
contracts/modules/batching-trait/: Cargo.toml
contracts/modules/mining_game/: Cargo.toml
contracts/modules/mining_game/src/: entropy.raw  mining_game.rs
contrib/: STARTUP-WORKSHOP.sh  STARTUP.sh  attest_config.json  attest_config.json.template  build_wasm.sh  disable_tauri_front.json  game_host_config.json  game_host_config.json.template  start_attest.sh  (+8 more)
ux/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ux/src-tauri/icons/: icon.icns
ux/src-tauri/src/: config.rs  main.rs  tasks.rs  tor.rs
ux/src-tauri/src/commands/: bindings.rs  mod.rs  modify.rs  view.rs
(+182 files in other folders)
