[workspace]
members = [
    "common/mine-with-friends-board",
    "common/attest",
    "common/attest-messages",
    "common/attest-database",
    "common/attest-util",
    "common/bitcoin-header-checkpoints",
    "common/game-host",
    "common/game-host-messages",
    "common/game-sequencer",
]

exclude=["ux/src-tauri/"]


