[workspace]
members = [
    "common/mine-with-friends-board",
    "common/attest",
    "common/attest-messages",
    "common/attest-database",
    "common/attest-util",
    "common/bitcoin-header-checkpoints",
    "common/event-log",
    "common/game-host",
    "common/game-host-messages",
    "common/game-sequencer",
    "common/sapio-litigator",
]

exclude=["ux/src-tauri/"]


