[workspace]
members = [
    "common/attest",
    "common/attest-messages",
    "common/attest-database",
    "common/attest-util",
    "common/bitcoin-header-checkpoints",
    "common/event-log",
    "common/game-host",
    "common/game-host-messages",
    "common/game-player-messages",
    "common/game-sequencer",
    "common/mine-with-friends-board",
    "common/sapio-litigator",
    "common/simps",
]

exclude=["ux/src-tauri/"]


