[package]
name = "attest-messages"
version = "0.1.0"
edition = "2021"


[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
ruma-serde = "0.6.0"
schemars = "0.8.10"

[dependencies.rusqlite]
version = "0.27.0"
optional = true
features = ["serde_json"]

[dependencies.sapio-bitcoin]
version = "0.28.1"
features=['use-serde', 'rand', 'use-schemars']
