[package]
name = "attest-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"], optional=true }
tracing = {version="0.1.35", optional=true}

[dependencies.bitcoincore-rpc-async]
version = "4.0.1-alpha.1"
optional = true

[dependencies.serde]
version = "1.0.136"
optional= true

[features]
bitcoin = ["bitcoincore-rpc-async", "serde"]