[package]
name = "attest"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
axum = "0.5.7"
tracing-subscriber = "0.3.11"
tracing = "0.1.35"
reqwest = {version="=0.11.10", features=["socks", "json"]}
serde_json = "1.0.79"
serde = "1.0.136"
futures = "0.3.21"
bitcoincore-rpc-async = "4.0.1-alpha.1"
ruma-serde = "0.6.0"
[dependencies.tower-http]
version = "0.3.4"
features = [ "cors", "trace" ]

[dependencies.libtor]
version = "47.7.0+0.4.7.x"

[dependencies.openssl-sys]
features = ["vendored"]

[dependencies.attest-util]
path = "../attest-util"
features = ["tokio", "tracing"]
[dependencies.attest-database]
path = "../attest-database"

[dependencies.attest-messages]
path = "../attest-messages"
features = ["rusqlite"]

[dependencies.bitcoin-header-checkpoints]
path = "../bitcoin-header-checkpoints"

[dependencies.rusqlite]
version = "0.27.0"
features = ["serde_json"]

[dependencies.sapio-bitcoin]
version = "0.28.1"
features=['use-serde', 'rand']

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.11"