[package]
name = "game-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"

[dependencies.attest-messages]
path = "../attest-messages"

[dependencies.attest-database]
path = "../attest-database"

[dependencies.sapio-bitcoin]
version = "0.28.1"
features=['use-serde', 'rand']