[package]
name = "game-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
axum = "0.5.7"
tracing-subscriber = "0.3.11"
tracing = "0.1.35"

[dependencies.attest-messages]
path = "../attest-messages"

[dependencies.attest-database]
path = "../attest-database"

[dependencies.sapio-bitcoin]
version = "0.28.1"
features=['use-serde', 'rand']

[dependencies.game-host-messages]
path = "../game-host-messages"

[dependencies.libtor]
version = "47.7.0+0.4.7.x"