[package]
name = "game-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
axum = "0.5.7"
tracing-subscriber = "0.3.11"
tracing = "0.1.35"
directories = "3.0.1"
ruma-serde = "0.6.0"
tower-layer = "0.3.1"
bitcoincore-rpc-async = "4.0.1-alpha.1"

[dependencies.tower-http]
version = "0.3.4"
features = [ "cors", "trace" ]

[dependencies.attest-messages]
path = "../attest-messages"

[dependencies.attest-database]
path = "../attest-database"

[dependencies.sapio-bitcoin]
version = "0.28.1"
features=['use-serde', 'rand', 'use-serde', 'rand', 'base64', 'bitcoinconsensus']

[dependencies.game-host-messages]
path = "../game-host-messages"
[dependencies.game-player-messages]
path = "../game-player-messages"
[dependencies.game-sequencer]
path = "../game-sequencer"

[dependencies.libtor]
version = "47.7.0+0.4.7.x"

[dependencies.openssl-sys]
features = ["vendored"]

[dependencies.attest-util]
path = "../attest-util"
features = ["tokio", "tracing", "bitcoin"]

[dependencies.mine-with-friends-board]
path = "../mine-with-friends-board"

[dependencies.sapio-wasm-plugin]
path = "../../submodule/sapio/plugins"
version = "0.2.0"
features = ["host"]
[dependencies.sapio]
path = "../../submodule/sapio/sapio"
version = "0.2.0"

[dependencies.sapio-psbt]
path = "../../submodule/sapio/sapio-psbt"
version = "0.1.0"
[dependencies.ctv_emulators]
path = "../../submodule/sapio/ctv_emulators"
version = "0.2.0"