[package]
name = "game-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
schemars = "0.8.10"

tokio = { version = "1.19.0", features = ["full"] }
[dependencies.mine-with-friends-board]
path = "../mine-with-friends-board"

[dependencies.sapio-bitcoin]
version = "0.28.1"
features=['use-serde', 'rand']

[dependencies.attest-messages]
path = "../attest-messages"

[dependencies.attest-database]
path = "../attest-database"
optional=true

[dependencies.game-host-messages]
path = "../game-host-messages"

[features]
default = ["database_access"]
database_access = ["attest-database"]

[dev-dependencies]
ruma-serde = "0.6.0"