[package]
name = "mine-with-friends-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.10"
tracing = "0.1.35"
ruma-serde = "0.6.0"

[dependencies.attest-messages]
path = "../attest-messages"