[package]
name = "sapio-litigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
directories = "3.0.1"
jsonschema-valid = "0.4.0"
bitcoincore-rpc-async = "4.0.1-alpha.1"
ruma-serde = "0.6.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"


[dependencies.mine-with-friends-board]
path = "../mine-with-friends-board"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde', 'rand', 'base64', 'bitcoinconsensus']


[dependencies.sapio]
path = "../../submodule/sapio/sapio"
version = "0.2.0"

[dependencies.sapio-base]
path = "../../submodule/sapio/sapio-base"
version = "0.2.0"

[dependencies.ctv_emulators]
path = "../../submodule/sapio/ctv_emulators"
version = "0.2.0"


[dependencies.sapio-wasm-plugin]
path = "../../submodule/sapio/plugins"
version = "0.2.0"
features = ["host"]

[dependencies.attest-messages]
path = "../attest-messages"

[dependencies.attest-database]
path = "../attest-database"

[dependencies.event-log]
path = "../event-log"

[dependencies.attest-util]
path = "../attest-util"
features = ["bitcoin"]

[dependencies.simps]
path = "../simps"

[dependencies.game-sequencer]
path = "../game-sequencer"
features = ["database_access"]

[dependencies.game-host-messages]
path = "../game-host-messages"

[dependencies.bitcoinconsensus]
version = "0.19.0-3"
