[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
schemars = "0.8.10"

[dependencies.tokio]
version = "*"
features = ["time"]
[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision"]
[dependencies.mine-with-friends-board]
path = "../../common/mine-with-friends-board"
[dependencies.attest-database]
path = "../../common/attest-database"


[dependencies.sapio-bitcoin]
version = "0.28.1"
features= ['use-serde', 'rand']

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
