[package]
name = "mining-game-contract"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "An Example Sapio Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true

[dependencies.sapio]
path = "../../../submodule/sapio/sapio"
version = "0.2.0"

[dependencies.sapio-base]
path = "../../../submodule/sapio/sapio-base"
version = "0.2.0"

[dependencies.sapio-contrib]
path = "../../../submodule/sapio/sapio-contrib"
version = "0.2.0"

[dependencies.sapio-ctv-emulator-trait]
path = "../../../submodule/sapio/emulator-trait"
version = "0.2.0"

[dependencies.sapio-wasm-plugin]
path = "../../../submodule/sapio/plugins"
version = "0.2.0"
features = ["client"]

[dependencies.schemars]
version = "0.8.0"
features = ['impl_json_schema']

[dependencies.mine-with-friends-board]
path = "../../../common/mine-with-friends-board"
version = "0.1.0"


[lib]
crate-type = ["cdylib", "rlib"]
path = "src/mining_game.rs"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
